# birdwing-labelling

./: .gitignore  LICENSE  README.ipynb  README.md  documentation.md  pyproject.toml  toDoList.txt
birdwinglabel/data/: playTest.py
plots/: test_log_graphs.py
src/birdwinglabel/EncDecTransformers/: IdentifyMarkerTransformer_weights.pth  factories.py  labelling.py  labelling_test.py  model1.py  model2.py  model2_2_1_IdentifyMarkerTimeIndptTransformer_weights.pth  model2_2_1_train_log.txt  model2_2_2_IdentifyMarkerTimeIndptTransformer_weights.pth  model2_2_2_train_log.txt  model2_2_IdentifyMarkerTimeIndptTransformer_weights.pth  model2_2_train_log.txt  model2_sample_variance.npy  model2_train_log.txt  prediction.py
src/birdwinglabel/EncoderOnlyTransformers/: DecoderOnlyTransformer_weights.pth  ET_32m_more_data_train_log.txt  ET_32m_more_data_weights.pth  ET_hard_train_log.txt  ET_hard_weights.pth  ET_simple_train_log.txt  ET_simple_weights.pth  basic.py  labelling-0.py  labelling-1.py  labelling.py  trainingallmarkers.py  trainingfullmarkers.py
src/birdwinglabel/MLP/: MLP1_weights.pth  MLP_8m_train_log.txt  prototype.py  prototype_MLP1_weights.pth  wrong_loss_train_log.txt  wrong_loss_weights.pth
src/birdwinglabel/Transformers/: DecoderOnlyTransformer_weights.pth  basic.py  labelling.py  trainingallmarkers.py  trainingfullmarkers.py
src/birdwinglabel/common/: createtorchdataset.py  prepforML.py  trainandtest.py
src/birdwinglabel/data/: createtorchdataset.py  crossreference.py  data.py
tests/: doc_examples.py  playTest.py  playground.py  warm_up.py
(+12 files in other folders)
